# haskell-telegram-api

./: telegram-api.cabal
src/Servant/Client/: MultipartFormData.hs
src/Web/Telegram/API/Bot/: Data.hs
src/Web/Telegram/API/Bot/API/: Core.hs
