name:                telegram-api
version:             0.7.1.0
synopsis:            Telegram Bot API bindings
description:         High-level bindings to the Telegram Bot API
homepage:            http://github.com/klappvisor/haskell-telegram-api#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Rodiontsev
maintainer:          alex.rodiontsev@gmail.com
copyright:           Alexey Rodiontsev (c) 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:          test-data/christmas-cat.jpg
                   , test-data/cert.pem
                   , test-data/haskell-logo.webp
                   , test-data/lego-video.mp4
                   , test-data/lego-square.mp4
                   , test-data/Possible_PDM_signal_labeled_as_Sputnik_by_NASA.ogg
                   , test-data/concerto-for-2-trumpets-in-c-major.mp3
                   , test-data/wikipedia-telegram.txt
                   , test-data/sticker_1.png
                   , test-data/sticker_2.png

extra-source-files:
  README.md
  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Web.Telegram.API.Bot
                     , Web.Telegram.API.Bot.API
                     , Web.Telegram.API.Bot.API.Messages
                     , Web.Telegram.API.Bot.API.Edit
                     , Web.Telegram.API.Bot.API.Queries
                     , Web.Telegram.API.Bot.API.Get
                     , Web.Telegram.API.Bot.API.Updates
                     , Web.Telegram.API.Bot.API.Chats
                     , Web.Telegram.API.Bot.API.Payments
                     , Web.Telegram.API.Bot.API.Stickers
                     , Web.Telegram.API.Bot.Data
                     , Web.Telegram.API.Bot.Responses
                     , Web.Telegram.API.Bot.Requests
  other-modules:       Web.Telegram.API.Bot.JsonExt
                     , Web.Telegram.API.Bot.API.Core
                     , Servant.Client.MultipartFormData
  build-depends:       base                  >= 4.7 && < 5
                     , aeson                 >= 1.4.1.0 
                     , containers            >= 0.6.0.1 && < 0.7
                     , http-api-data         >= 0.4.1 && < 0.5
                     , http-client           >= 0.6.4 && < 0.7
                     , servant               >= 0.16.2 && < 0.19
                     , servant-client        >= 0.17 && < 0.19
                     , servant-client-core   >= 0.16 && < 0.19
                     , mtl                   >= 2.2.2 && < 2.3
                     , text                  >= 1.2.3 && < 1.3
                     , transformers          >= 0.5.6 && < 0.6
                     , http-media            >= 0.8.0 && < 0.9
                     , http-types            >= 0.12.3 && < 0.13
                     , mime-types            >= 0.1.0 && < 0.2
                     , bytestring            >= 0.10.8 && < 0.11
                     , string-conversions    >= 0.4.0 && < 0.5
                     , binary                >= 0.8.6 && < 0.9
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-binds

test-suite telegram-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       MainSpec
                     , InlineSpec
                     , PaymentsSpec
                     , JsonSpec
                     , UpdatesSpec
                     , StickersSpec
                     , TestCore
  build-depends:       base
                     , aeson
                     , hjpath
                     , ansi-wl-pprint
                     , http-client
                     , http-client-tls
                     , http-types
                     , hspec
                     , optparse-applicative
                     , servant
                     , servant-client
                     , servant-client-core
                     , telegram-api
                     , http-types
                     , filepath
                     , text
                     , transformers
                     , utf8-string
                     , random
                     , binary
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/klappvisor/haskell-telegram-api
